--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 Sunt nihil optio natus et blanditiis, odit omnis a soluta fugit saepe! 
                 Inventore assumenda eveniet dolores maiores nostrum reiciendis unde suscipit soluta?
             </p>
-            <a href="./contact.html" class="btn">contact me</a>
+            <a href="wa.me/923484323960" class="btn">contact me</a>
         </div>        
     </section>
     <!-- end of connect -->
