--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
             <ul class="social-icons">
                 <!-- single item -->
                 <li>
-                    <a href="https://www.facebook.com/farhan.yousaf.313" class="social-icon">
+                    <a href="https://www.facebook.com" class="social-icon">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.linkedin.com/in/farhan-yousaf-267771236/" class="social-icon">
+                    <a href="https://www.linkedin.com" class="social-icon">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 </li>
@@ -65,14 +65,14 @@
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://twitter.com/bobyjutt729" class="social-icon">
+                    <a href="https://twitter.com" class="social-icon">
                     <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.instagram.com/farhanjutt2511/" class="social-icon">
+                    <a href="https://www.instagram.com" class="social-icon">
                     <i class="fab fa-instagram"></i>
                     </a>
                 </li>
@@ -92,27 +92,27 @@
                 <ul class="social-icons hero-icons">
                     <!-- single item -->
                 <li>
-                    <a href="https://www.facebook.com/farhan.yousaf.313" class="social-icon">
+                    <a href="https://www.facebook.com" class="social-icon">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.linkedin.com/in/farhan-yousaf-267771236/" class="social-icon">
+                    <a href="https://www.linkedin.com" class="social-icon">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://twitter.com/bobyjutt729" class="social-icon">
+                    <a href="https://twitter.com" class="social-icon">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
                 </li>
                 
                 <li>
-                    <a href="https://www.instagram.com/farhanjutt2511/" class="social-icon">
+                    <a href="https://www.instagram.com" class="social-icon">
                     <i class="fab fa-instagram"></i>
                     </a>
                 </li>
