--- a/index.html
+++ b/index.html
@@ -193,10 +193,8 @@
             <h2>latest works</h2>
             <div class="underline"></div>
             <p class="projects-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt sed
-                reiciendis quis provident vero cum accusamus illum perferendis
-                debitis, alias porro? Incidunt, veniam? Dicta adipisci accusamus
-                officia temporibus inventore a.
+                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
             </p>
         </div>
         <!-- end of section title -->
@@ -266,9 +264,8 @@
                 <div class="underline"></div>
             </div>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Sunt nihil optio natus et blanditiis, odit omnis a soluta fugit saepe! 
-                Inventore assumenda eveniet dolores maiores nostrum reiciendis unde suscipit soluta?
+                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
             </p>
             <a href="https://api.whatsapp.com/send/?phone=923484323960&text&type=phone_number&app_absent=0" class="btn">contact me</a>
         </div>        
@@ -361,9 +358,8 @@
                         <div class="card-info">
                             <h4>article title</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Exercitationem corrupti laudantium non praesentium neque, 
-                                voluptates enim sequi ut nulla tempora.
+                                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
                             </p>
                             <div class="card-footer">
                                 <img src="./img/facebook img.jpg" alt="author img">
@@ -386,9 +382,8 @@
                         <div class="card-info">
                             <h4>article title</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Exercitationem corrupti laudantium non praesentium neque, 
-                                voluptates enim sequi ut nulla tempora.
+                                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
                             </p>
                             <div class="card-footer">
                                 <img src="./img/facebook img.jpg" alt="author img">
@@ -411,9 +406,8 @@
                         <div class="card-info">
                             <h4>article title</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Exercitationem corrupti laudantium non praesentium neque, 
-                                voluptates enim sequi ut nulla tempora.
+                                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
                             </p>
                             <div class="card-footer">
                                 <img src="./img/facebook img.jpg" alt="author img">
@@ -436,9 +430,8 @@
                         <div class="card-info">
                             <h4>article title</h4>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                Exercitationem corrupti laudantium non praesentium neque, 
-                                voluptates enim sequi ut nulla tempora.
+                                As a React.js developer, I specialize in developing web applications using the React library. I have expertise in creating interactive and highly responsive user interfaces, leveraging React's component-based architecture.
+
                             </p>
                             <div class="card-footer">
                                 <img src="./img/facebook img.jpg" alt="author img">
