some issue resolve

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <!-- nav-links -->
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Contact</a></li>
         </ul>
     </div>
     </nav>
@@ -37,21 +37,21 @@
             </button>
             <ul class="sidebar-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Projects</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
             <ul class="social-icons">
                 <!-- single item -->
                 <li>
-                    <a href="https://www.facebook.com" class="social-icon">
+                    <a href="https://www.facebook.com/farhan.yousaf.313" class="social-icon">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.linkedin.com" class="social-icon">
+                    <a href="https://www.linkedin.com/in/farhan-yousaf-267771236/" class="social-icon">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 </li>
@@ -61,14 +61,14 @@
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://twitter.com" class="social-icon">
+                    <a href="https://twitter.com/bobyjutt729" class="social-icon">
                     <i class="fa-brands fa-twitter"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.instagram.com" class="social-icon">
+                    <a href="https://www.instagram.com/farhanyousaf729/" class="social-icon">
                     <i class="fab fa-instagram"></i>
                     </a>
                 </li>
@@ -88,27 +88,27 @@
                 <ul class="social-icons hero-icons">
                     <!-- single item -->
                 <li>
-                    <a href="https://www.facebook.com" class="social-icon">
+                    <a href="https://www.facebook.com/farhan.yousaf.313" class="social-icon">
                         <i class="fab fa-facebook"></i>
                     </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://www.linkedin.com" class="social-icon">
+                    <a href="https://www.linkedin.com/in/farhan-yousaf-267771236/" class="social-icon">
                     <i class="fab fa-linkedin"></i>
                 </a>
                 </li>
                 <!-- single item end -->
                 <!-- single item -->
                 <li>
-                    <a href="https://twitter.com" class="social-icon">
+                    <a href="https://twitter.com/bobyjutt729" class="social-icon">
                     <i class="fa-brands fa-twitter"></i>
                 </a>
                 </li>
                 
                 <li>
-                    <a href="https://www.instagram.com" class="social-icon">
+                    <a href="https://www.instagram.com/farhanyousaf729/" class="social-icon">
                     <i class="fab fa-instagram"></i>
                     </a>
                 </li>
@@ -452,21 +452,21 @@
         <ul class="social-icons">
             <!-- single item -->
             <li>
-                <a href="https://www.facebook.com" class="social-icon">
+                <a href="https://www.facebook.com/farhan.yousaf.313" class="social-icon">
                     <i class="fab fa-facebook"></i>
                 </a>
             </li>
             <!-- single item end -->
             <!-- single item -->
             <li>
-                <a href="https://www.linkedin.com" class="social-icon">
+                <a href="https://www.linkedin.com/in/farhan-yousaf-267771236/" class="social-icon">
                 <i class="fab fa-linkedin"></i>
             </a>
             </li>
             <!-- single item end -->
             <!-- single item -->
             <li>
-                <a href="https://www.twitter.com" class="social-icon">
+                <a href="https://twitter.com/bobyjutt729" class="social-icon">
                 <i class="fa-brands fa-twitter"></i>
                 </a>
             </li>
@@ -476,7 +476,7 @@
             <!-- single item end -->
             <!-- single item -->
             <li>
-                <a href="https://www.instagram.com" class="social-icon">
+                <a href="https://www.instagram.com/farhanyousaf729/" class="social-icon">
                 <i class="fab fa-instagram"></i>
                 </a>
             </li>
