--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <article class="hero-info">
                 <div class="underline"></div>
                 <h1>i'm web developer</h1>
-                <h4>freelance web </h4>
-                <a href="contact.html" class="btn hero-btn">hire me</a>
+                <!-- <h4>freelance web </h4> -->
+                <a href="" class="btn hero-btn">hire me</a>
                 <ul class="social-icons hero-icons">
                     <!-- single item -->
                 <li>
@@ -116,7 +116,7 @@
                 </ul>
             </article>
             <article class="hero-img">
-                <img src="./img/WhatsApp Image 2023-06-12 at 1.11.04 PM.jpeg" class="hero-photo" alt="hero-img">
+                <img src="./img/WhatsApp Image 2023-11-03 at 12.54.13 AM.jpeg" class="hero-photo" alt="hero-img">
             </article>
         </div>
     </header>
